# autoreset

./: .gitignore  README.md  pyproject.toml
configs/: seed_selection.yaml  training.yaml  training_bs128_plateau_lr.yaml  training_early_stop_smoke.yaml  training_isotropic_bs64_plateau_lr.yaml  training_scheduler_smoke.yaml
data_collection_mod/: README.md
data_collection_mod/datasetcollect/: build.gradle  gradle.properties  settings.gradle
data_collection_mod/datasetcollect/src/main/java/me/cv/datasetcollect/: DatasetCollectConfig.java  DatasetCollectMod.java  DatasetCollector.java
data_collection_mod/datasetcollect/src/main/resources/: datasetcollect.mixins.json  fabric.mod.json
data_collection_mod/datasetcollect/src/main/resources/assets/datasetcollect/lang/: en_us.json
scripts/: setup_cubiomes.sh
src/seed_preview_cv/: __init__.py
src/seed_preview_cv/collection/: compare_spawns.py  integrate_datasets.py  mask_screenshots.py  mask_screenshots_cli.py  prepare_dataset_images.py  sample_pilot.py
src/seed_preview_cv/common/: config.py  image_preprocess.py  paths.py
src/seed_preview_cv/cubiomes_bindings/: __init__.py  build.py  ffi.py  seed_preview_cubiomes_wrapper.h  wrapper_impl.c
src/seed_preview_cv/inference/: __init__.py  predict.py
src/seed_preview_cv/labeling/: annotate_compare.py  annotate_labels.py  biome_groups.py  compute_labels.py  plot_pilot_scores.py  random_label_benchmark.py  scoring.py  summarize_labels.py  weights.py
src/seed_preview_cv/seed_selection/: acceptance.py  apply_acceptance.py  build_seed_txt.py  distances.py  plot_distances.py  plot_distances_cli.py  scan_distances.py  seeds.py  summarize_distances.py
src/seed_preview_cv/training/: __init__.py  dataset.py  losses.py  make_splits.py  metrics.py  model.py  train.py
tests/: test_acceptance.py  test_biome_groups.py  test_dataset.py  test_inference_predict.py  test_integrate_datasets.py  test_labeling.py  test_losses.py  test_make_splits.py  test_mask_screenshots.py  test_metrics.py  test_model.py  test_plot_distances.py  test_scaffold.py  test_seed_selection.py  test_train_early_stopping.py  test_train_eval.py  test_train_resume.py  test_train_scheduler.py
(+3 files in other folders)
